# thu-cloud-keeper

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
docs/: scheduled-sync.md
scripts/: install_scheduled_sync.ps1  package_macos.sh  package_windows.ps1  pyinstaller_entry.py  run.bat  run.ps1  run_scheduled_sync.ps1  store_token.ps1
src/tsinghua_cloud_backup/: __init__.py  app.py  baidu.py  cli.py  core.py  credentials.py  migration.py  web_console.py
