[project]
name = "tsinghua-cloud-backup"
version = "0.1.0"
description = "Tkinter GUI for backing up Tsinghua Cloud / Seafile libraries."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tsinghua-cloud-backup = "tsinghua_cloud_backup.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
