[project]
name = "tsinghua-cloud-backup"
version = "0.1.0"
description = "Tkinter app and optional Web console for backing up Tsinghua Cloud / Seafile libraries."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tsinghua-cloud-backup = "tsinghua_cloud_backup.cli:main"
tsinghua-cloud-backup-web = "tsinghua_cloud_backup.web_console:main"
tsinghua-cloud-backup-tk = "tsinghua_cloud_backup.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
